# dsp-reusable-workflows

./: .gitignore  README.md
.github/: upload_test_results_to_biquery.yaml
.github/actions/run-publish-contracts/: action.yaml
.github/actions/run-swat-tests/: action.yaml
.github/workflows/: can-i-deploy.yaml  cromwell-az-e2e-test.yaml  run-e2e-tests.yaml  run_cbas_azure_e2e_tests.yaml  run_teaspoons_e2e_cli_tests.yaml  run_teaspoons_e2e_service_tests.yaml  run_teaspoons_e2e_tests.yaml  run_tsps_e2e_service_test_live_env.yaml  run_tsps_e2e_service_test_real_sample.yaml  run_tsps_e2e_tests.yaml  upload_test_results_to_biquery.yaml
e2e-test/: README.md  app_helper.py  cbas_azure_e2e_test.py  cbas_helper.py  cromwell_azure_e2e_test.py  e2etest.py  helper.py  requirements.txt  teaspoons_gcp_cli_e2e_test_cleanup.py  teaspoons_gcp_cli_e2e_test_setup.py  teaspoons_gcp_e2e_cli_test_cleanup.py  teaspoons_gcp_e2e_cli_test_setup.py  teaspoons_gcp_e2e_service_test.py  teaspoons_gcp_e2e_service_test_live_env.py  teaspoons_gcp_e2e_service_test_real_sample.py  teaspoons_gcp_e2e_test.py  teaspoons_helper.py  tsps_azure_e2e_test.py  tsps_e2e_test.py  tsps_gcp_e2e_test.py  wds_azure_e2etest.py  workspace_helper.py
e2e-test/cromwell_az_e2e_test/: pyproject.toml
e2e-test/resources/: all_data_types.tsv  test.tsv
upload-test-results/: parse_test_results.py  requirements.txt
workflow-dockstore-metrics/: README.md  pyproject.toml
workflow-dockstore-metrics/workflow_dockstore_metrics/: config.ini  pull_and_send_metrics.py  pull_data.py  pyvenv.cfg  queries.py
(+8 files in other folders)
